syntax = "proto3";

package api.applicant.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "credit-analytics-backend/api/applicant/v1;v1";
option java_multiple_files = true;
option java_package = "api.applicant.v1";

service Applicant {
  rpc CreateApplicant (CreateApplicantRequest) returns (CreateApplicantReply) {
    option (google.api.http) = {
      post: "/v1/applicants",
      body: "*"
    };
  }
  rpc GetApplicant (GetApplicantRequest) returns (GetApplicantReply) {
    option (google.api.http) = {
      get: "/v1/applicants/{id}"
    };
  }
  rpc UpdateApplicant (UpdateApplicantRequest) returns (UpdateApplicantReply) {
    option (google.api.http) = {
      put: "/v1/applicants/{id}",
      body: "*"
    };
  }
  rpc ListApplicants (ListApplicantsRequest) returns (ListApplicantsReply) {
    option (google.api.http) = {
      get: "/v1/applicants"
    };
  }
  rpc UpsertApplicantAttribute (UpsertApplicantAttributeRequest) returns (ApplicantAttribute) {
    option (google.api.http) = {
      post: "/v1/applicants/{applicant_id}/attributes",
      body: "*"
    };
  }
}

message ApplicantAttribute {
  string key = 1;
  string value = 2;
  string data_type = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message ApplicantInfo {
  string id = 1;
  string applicant_type = 2;
  string identity_number = 3;
  string tax_id = 4;
  string full_name = 5;
  string birth_date = 6;
  string establishment_date = 7;
  repeated ApplicantAttribute attributes = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

message CreateApplicantRequest {
  string applicant_type = 1;
  string identity_number = 2;
  string tax_id = 3;
  string full_name = 4;
  string birth_date = 5;
  string establishment_date = 6;
  repeated ApplicantAttribute attributes = 7;
}

message CreateApplicantReply {
  string id = 1;
  string message = 2;
}

message GetApplicantRequest {
  string id = 1;
}

message GetApplicantReply {
  ApplicantInfo applicant = 1;
}

message UpdateApplicantRequest {
  string id = 1;
  string applicant_type = 2;
  string identity_number = 3;
  string tax_id = 4;
  string full_name = 5;
  string birth_date = 6;
  string establishment_date = 7;
  repeated ApplicantAttribute attributes = 8;
}

message UpdateApplicantReply {
  string message = 1;
}

message ListApplicantsRequest {
  int32 page = 1;
  int32 page_size = 2;
  string keyword = 3;
}

message ListApplicantsReply {
  repeated ApplicantInfo applicants = 1;
  int32 total = 2;
}

message UpsertApplicantAttributeRequest {
  string applicant_id = 1;
  string key = 2;
  string value = 3;
  string data_type = 4;
}
